--- a/core/pawn-org.org
+++ b/core/pawn-org.org
@@ -11,7 +11,15 @@
 (setq org-default-notes-file "~/Dropbox/org/notes.org")
 
 ;;; Agenda
-(setq org-agenda-files '("~/Dropbox/org/diary.org"))
+(setq org-agenda-files '("~/Dropbox/org/diary.org")
+
+      ;; start agenda from the current day.
+      org-agenda-start-on-weekday nil
+
+      ;; don't show scheduled or deadline items in agenda when they are done.
+      org-agenda-skip-scheduled-if-done t
+      org-agenda-skip-deadline-if-done t
+      )
 
 ;;; Capture
 (setq org-capture-templates
