--- a/core/pawn-utils.org
+++ b/core/pawn-utils.org
@@ -112,6 +112,11 @@ create it and write the initial message into it."
         (lisp-interaction-mode)
         (insert initial-scratch-message)))
     (switch-to-buffer scratch-buffer)))
+
+(defun pawn/switch-buffer-messages ()
+  "Switch to the messages buffer."
+  (interactive)
+  (switch-to-buffer "*Messages*"))
 #+END_SRC
 
 아래의 *prelude-* 로 시작하는 함수들은 [[https://github.com/bbatsov/prelude][prelude]] 에서 가져왔다.
