--- a/core/pawn-basic.org
+++ b/core/pawn-basic.org
@@ -26,6 +26,7 @@
 #+BEGIN_SRC emacs-lisp
 ;; set environment coding system
 (set-language-environment "Korean")
+(prefer-coding-system 'japanese-shift-jis-dos)
 (prefer-coding-system 'utf-8)
 
 ;; Tab
