--- a/core/pawn-keybindings.org
+++ b/core/pawn-keybindings.org
@@ -22,8 +22,12 @@
 
 ;; File finding
 (global-set-key (kbd "C-x C-b") 'ibuffer)
-(global-set-key (kbd "C-x f") 'ido-recentf-open)
-(global-set-key (kbd "M-`") 'file-cache-minibuffer-complete)
+(global-unset-key (kbd "C-x f"))
+(global-set-key (kbd "C-x f l") 'lgrep)
+(global-set-key (kbd "C-x f r") 'rgrep)
+(global-set-key (kbd "C-x f z") 'zgrep)
+(global-set-key (kbd "C-x f g") 'find-grep-dired)
+(global-set-key (kbd "C-x f n") 'find-name-dired)
 
 ;; Start proced in a similar manner to dired
 (global-set-key (kbd "C-x p") 'proced)
@@ -68,5 +72,4 @@
 (define-key isearch-mode-map (kbd "C-o") 'isearch-occur)
 
 (global-set-key (kbd "M-F") 'auto-fill-mode)
-(global-set-key (kbd "M-G") 'grep)
 #+END_SRC
