--- a/core/pawn-utils.org
+++ b/core/pawn-utils.org
@@ -117,6 +117,14 @@ create it and write the initial message into it."
   "Switch to the messages buffer."
   (interactive)
   (switch-to-buffer "*Messages*"))
+
+(defun pawn/toggle-input-method ()
+  "Turn on or off a default input method"
+  (interactive)
+  (if (string= current-input-method
+               default-input-method)
+      (deactivate-input-method)
+    (activate-input-method default-input-method)))
 #+END_SRC
 
 아래의 *prelude-* 로 시작하는 함수들은 [[https://github.com/bbatsov/prelude][prelude]] 에서 가져왔다.
