--- a/core/pawn-ui.org
+++ b/core/pawn-ui.org
@@ -78,18 +78,35 @@
 #+END_SRC
 * Smartparens
 #+BEGIN_SRC emacs-lisp
-(use-package smartparens
-  :ensure t
+(use-package smartparens-config
+  :ensure smartparens
   :diminish smartparens-mode
-  :init
+  :config
   (setq sp-base-key-bindings 'paredit
         sp-autoskip-closing-pair 'always)
-  :config
+  (smartparens-global-mode t)
+  (show-smartparens-global-mode t)
   (sp-use-paredit-bindings)
-  (show-smartparens-global-mode +1)
-  (sp-pair "'" nil :actions :rem)
-  (sp-pair "\"" nil :actions :rem)
-  (sp-pair "`" nil :actions :rem))
+
+  (sp-with-modes sp--lisp-modes
+    ;; disable ', it's the quote character!
+    (sp-local-pair "'" nil :actions nil)
+    ;; also only use the pseudo-quote inside strings where it serve as
+    ;; hyperlink.
+    (sp-local-pair "`" "'" :when '(sp-in-string-p sp-in-comment-p))
+    (sp-local-pair "`" nil
+                   :skip-match (lambda (ms mb me)
+                                 (cond
+                                  ((equal ms "'")
+                                   (or (sp--org-skip-markup ms mb me)
+                                       (not (sp-point-in-string-or-comment))))
+                                  (t (not (sp-point-in-string-or-comment)))))))
+
+  ;; Smartparens-strict-mode in lispy modes.
+  (mapc (lambda (mode)
+          (add-hook (intern (format "%s-hook" (symbol-name mode)))
+                    'smartparens-strict-mode))
+        sp--lisp-modes))
 #+END_SRC
 * Disable Bell
 Beep을 끈다. 또한 시각적 bell도 사용하지 않는다.
