--- a/core/pawn-utils.org
+++ b/core/pawn-utils.org
@@ -125,6 +125,19 @@ create it and write the initial message into it."
                default-input-method)
       (deactivate-input-method)
     (activate-input-method default-input-method)))
+
+(defun pawn/current-lispy-namespace (separator)
+  (if (projectile-project-p)
+      (let ((project-name (projectile-project-name))
+            (project-relative-name
+             (file-relative-name default-directory
+                                 (projectile-project-root))))
+        (cond ((string= project-relative-name "./") project-name)
+              ((string= project-relative-name "src/") project-name)
+              ((concat (projectile-project-name)
+                       separator
+                       (directory-file-name project-relative-name)))))
+    (car (last (delete "" (split-string default-directory "/"))))))
 #+END_SRC
 
 아래의 *prelude-* 로 시작하는 함수들은 [[https://github.com/bbatsov/prelude][prelude]] 에서 가져왔다.
