--- a/modules/pawn-common-lisp.org
+++ b/modules/pawn-common-lisp.org
@@ -47,8 +47,14 @@
  (bind-key "C-c C-z" 'pawn/slime-switch-to-output-buffer slime-mode-map)
  (bind-key "C-c C-z" 'pawn/slime-repl-switch-back slime-repl-mode-map)
  (bind-key "C-x M-e" 'pawn/slime-eval-and-replace slime-mode-map)
+ (bind-key "C-c C-t" 'projectile-find-test-file slime-mode-map)
+ (bind-key "C-c t" 'projectile-test-project slime-mode-map)
  (add-hook 'slime-repl-mode-hook 'lisp-setup)
- (slime-setup '(slime-fancy)))
+
+ (add-to-list 'load-path (expand-file-name "no-elpa/slime-repl-ansi-color"
+                                           user-emacs-directory))
+
+ (slime-setup '(slime-fancy slime-banner slime-repl-ansi-color)))
 #+END_SRC
 
 slime에서 ,을 누르는 것을 통해 command을 입력하는 것이 가능하다.
